--- a/index.html
+++ b/index.html
@@ -8,22 +8,30 @@
     <!-- 自定义页面CSS -->
     <link rel="stylesheet" href="index_css.css" />
 </head>
-<body>
+<body style="background-color: black">
     <div id="frame">
-
-                    <a href="https://www.calibur.tv">
-                        <img id="icon" src="img/img1.png">
-                    </a>
-
-        <!-- <a href="https://www.calibur.tv"> -->
-            <!-- <img id="icon" src="img/img1.png"> -->
-        <!-- </a> -->
+        <a href="https://www.calibur.tv">
+            <img id="icon" src="img/img1.png">
+        </a>
     </div>
+
     <audio autoplay="autoplay" autoplay loop>
         <source src="audio_music/Endeavors (Original Mix).mp3" type="audio/mpeg" />
         <source src="audio_music/Endeavors (Original Mix).ogg" type="audio/ogg" />
     </audio>
     
-    
+    <!-- powered by calibur 运营团队 -->
+    <!-- 图标版权所有 上海十六夜网络科技有限公司 本网页仅供学习交流使用 -->
+    <!-- 
+          XX     XX  XX     XX
+           XX   XX    XX   XX
+            XX XX      XX XX
+             XXX        XXX
+            XX XX      XX XX
+           XX   XX    XX   XX
+          XX     XX  XX     XX
+        DARLING  in  the  FRANXX
+    -->
+
 </body>
 </html>
